--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -27,15 +27,21 @@
             <div *ngIf="customer.controls['address'].errors.maxlength">Address must be at most 50 characters</div>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" *ngIf="checkbox">
         <label>Email</label>
-        <input type="text" formControlName="email" class="form-control" required />
+        <input type="text"  formControlName="email" class="form-control" required />
         <div  *ngIf="customer.controls['email'].invalid && (customer.controls['email'].dirty || customer.controls['email'].touched)" class="alert alert-danger">
             <div *ngIf="customer.controls['email'].errors.required">Email is required</div>
             <div *ngIf="customer.controls['email'].errors.email">Email must be a valid email address</div>
         </div>
     </div>
     
+    <div class="form-group">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" formControlName="checkB" (click)="checkEmail()" value="" id="checkBox">
+            <label class="form-check-label" for="checkBox">checkbox</label>
+          </div>
+    </div>
     <div class="form-group">
         <label>Carrer</label>
         <input type="text" formControlName="carrer" class="form-control">
@@ -44,6 +50,8 @@
         <label>hobby</label>
         <input type="text" formControlName="hobby" class="form-control">
     </div>
+
+
     <div class="form-group">
         <button type="submit" class="btn btn-primary" [disabled]="!customer.valid">Submit</button>
     </div>
