--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -20,10 +20,11 @@
     </div>
     <div class="form-group">
         <label>Address</label>
-        <input type="text" formControlName="address" class="form-control" minlength="10" maxlength="50"/>
+        <input type="text" formControlName="address" class="form-control"  maxlength="50"/>
         <div  *ngIf="customer.controls['address'].invalid && (customer.controls['address'].dirty || customer.controls['address'].touched)" class="alert alert-danger">
             <div *ngIf="customer.controls['address'].errors.required">Address is required</div>
-            <div *ngIf="customer.controls['address'].errors.minlength">Address must be at least 10 characters</div>
+            <div *ngIf="!constrainted && customer.controls['address'].errors.minlength">Address must be at least 10 characters</div>
+            <div *ngIf="constrainted ">Address must be at least 20 characters</div>
             <div *ngIf="customer.controls['address'].errors.maxlength">Address must be at most 50 characters</div>
         </div>
     </div>
